--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="row">
       <div class="col-sm righto">
     <h2>CRCL - slow fashion app</h2>
-  <p>imagine if the best stylists from myntra curated a box of clothes just for you and delivered it to you every month! this project deals with how that would look and function in the myntra mobile app.</p>
+  <p>CRCL (Circle) allows you to indulge in your shopping sprees without harming the planet. Shop all you want without worrying about your carbon footprint. Yes, shop guilt-free!</p>
   <a href="https://www.behance.net/gallery/102530721/CRCL-Circular-fashion-UIUX" target="_blank" class="button">read more</a>
 </div>
 <div class="col-sm">
@@ -107,7 +107,7 @@
   </div>
   <div class="col-sm">
   <h2>micro interactions</h2>
-  <p>imagine if the best stylists from myntra curated a box of clothes just for you and delivered it to you every month! this project deals with how that would look and function in the myntra mobile app.</p>
+  <p>The sole purpose of this project is to explore micro interactions in web design and learn from the process. I hope you enjoy the following animations as much as I did while making them.</p>
   <a href="https://www.behance.net/gallery/103952657/Micro-Interactions" target="_blank" class="button">read more</a>
 </div>
 
