--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <li><a href="#about">about</a></li>
       <li><a href="#skills">skills</a></li>
       <li><a href="#projects">projects</a></li>
+      <li><a href="#contact">contact</a></li>
       <li class="empty-space"></li>
       <li><a href="http://www.linkedin.com/in/pranjal1303/" target="_blank">linkedin</a></li>
       <li><a href="http://www.instagram.com/pranjaljaindesigns" target="_blank">instagram</a></li>
@@ -35,8 +36,8 @@
           <a href="http://www.behance.net/pranjaljaindesigns" target="_blank" class="button" >view my behance</a>
         </div>
         <div class="col-sm">
-            <figure>
-              <img src="img/dp.jpg" alt="my dp was supposed to be here :/" class="dp-img" />
+            <figure class="dp-img">
+              <img src="img/dp.jpg" alt="my dp was supposed to be here :/"  />
               <figcaption>_very close to nature, clearly</figcaption>
             </figure>
       </div>
@@ -44,14 +45,30 @@
 </div>
   </header>
 
-  <section id="skills" class="skills-list">
-    <ul >
-      <li>01_user_experience_design</li>
-      <li>02_user_interface_design</li>
-      <li>03_visual_communication</li>
-      <li>04_motion_design</li>
-      <li>05_user_research</li>
-    </ul>
+  <section id="skills" >
+    <div class="container skills-container">
+      <div class="row">
+        <div class="col-sm">
+          <figure>
+
+            <img src="img/shy.jpg" alt="shy pic">
+            <figcaption>_very shy</figcaption>
+          </figure>
+
+        </div>
+        <div class="col-sm skills-list">
+          <h2>skills</h2>
+          <ul >
+            <li>01_user_experience_design</li>
+            <li>02_user_interface_design</li>
+            <li>03_visual_communication</li>
+            <li>04_motion_design</li>
+            <li>05_user_research</li>
+          </ul>
+        </div>
+
+  </div>
+  </div>
   </section>
 
   <!-- projects -->
@@ -68,7 +85,7 @@
   <div class="col-sm">
   <h2>myntra subscription box</h2>
   <p>imagine if the best stylists from myntra curated a box of clothes just for you and delivered it to you every month! this project deals with how that would look and function in the myntra mobile app.</p>
-  <a href="https://www.behance.net/gallery/92302389/Myntra-Subscription-Box-UIUX" target="_blank" class="button">read more</a>
+  <a href="https://www.behance.net/gallery/92302389/Myntra-Subscription-Box-UIUX" target="_blank" class="button">view more</a>
 </div>
 
 </div>
@@ -82,7 +99,7 @@
       <div class="col-sm righto">
     <h2>CRCL - slow fashion app</h2>
   <p>CRCL (Circle) allows you to indulge in your shopping sprees without harming the planet. Shop all you want without worrying about your carbon footprint. Yes, shop guilt-free!</p>
-  <a href="https://www.behance.net/gallery/102530721/CRCL-Circular-fashion-UIUX" target="_blank" class="button">read more</a>
+  <a href="https://www.behance.net/gallery/102530721/CRCL-Circular-fashion-UIUX" target="_blank" class="button">view more</a>
 </div>
 <div class="col-sm">
   <figure>
@@ -108,14 +125,56 @@
   <div class="col-sm">
   <h2>micro interactions</h2>
   <p>The sole purpose of this project is to explore micro interactions in web design and learn from the process. I hope you enjoy the following animations as much as I did while making them.</p>
-  <a href="https://www.behance.net/gallery/103952657/Micro-Interactions" target="_blank" class="button">read more</a>
+  <a href="https://www.behance.net/gallery/103952657/Micro-Interactions" target="_blank" class="button">view more</a>
 </div>
 
 </div>
 </div>
 </section>
 
-<footer>
+<!--new projects added -->
+
+<section class="project">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm righto">
+    <h2>lafzon lafzon mein</h2>
+  <p>lafzon lafzon mein is a card set, designed for english/hindi speaking people to help them learn the baeutiful script in which the urdu language is written - <b><i>nastaliq.</i></b></p>
+  <a href="https://www.behance.net/gallery/103119357/Lafzon-Lafzon-Mein-Card-set" target="_blank" class="button">view more</a>
+</div>
+<div class="col-sm">
+  <figure>
+    <img src="img/stp.jpg" alt="stp cover" />
+    <figcaption>card set design</figcaption>
+  </figure>
+</div>
+
+</div>
+</div>
+</section>
+
+
+<section class="project blue">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+    <figure>
+      <img src="img/classroom.png" alt="classroom cover" />
+      <figcaption>a ui/ux group project</figcaption>
+    </figure>
+  </div>
+  <div class="col-sm">
+  <h2>google classroom groups</h2>
+  <p>with the spread of the covid virus, our teachers and students have moved to online platforms like google classroom. this projects aims to add to it, a neat little feature of assigning, collaborating, submitting and grading <b><i> group assignments.</i></b></p>
+  <a href="https://www.behance.net/gallery/105157453/Google-Classroom-Group-assignment-feature" target="_blank" class="button">view more</a>
+</div>
+
+</div>
+</div>
+</section>
+
+
+<footer id="contact">
 <h2>any questions?<br/> mail me at pranjaljain1303@gmail.com</h2>
 <p>designed and developed by pranjal jain</p>
 </footer>
