Website upload draft 1

--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
       <li><a href="#projects">projects</a></li>
       <li><a href="#contact">contact</a></li>
       <li class="empty-space"></li>
-      <li><a href="http://www.linkedin.com/in/pranjal1303/" target="_blank">linkedin</a></li>
-      <li><a href="http://www.instagram.com/pranjaljaindesigns" target="_blank">instagram</a></li>
+      <li><a href="http://www.linkedin.com/in/bilalmustafa97/" target="_blank">linkedin</a></li>
+      <li><a href="http://www.instagram.com/thecoder17" target="_blank">instagram</a></li>
     </ul>
   </nav>
   <header id="about">
     <div class="container">
       <div class="row">
         <div class="col-sm">
-          <h1>hi, i am<br/>pranjal jain</h1>
+          <h1>Heyyy, I am <br/>Bilal Mustafa</h1>
           <ul class="intro-list">
-            <li>_ui/ux designer</li>
-            <li>_studies at iit guwahati</li>
-            <li>_worked at infosys, hyderabad briefly</li>
-            <li>_likes to learn new languages</li>
-            <li>_dances decently</li>
+            <li>DevOps Engineer</li>
+            <li>Philosopher</li>
+            <li>Footballer</li>
+            <li>Polyglot</li>
+            <li>Traveller</li>
           </ul>
-          <a href="http://www.behance.net/pranjaljaindesigns" target="_blank" class="button" >view my behance</a>
+          <a href="https://github.com/BMustafa97" target="_blank" class="button" >view my github</a>
         </div>
         <div class="col-sm">
             <figure class="dp-img">
-              <img src="img/dp.jpg" alt="my dp was supposed to be here :/"  />
-              <figcaption>_very close to nature, clearly</figcaption>
+              <img src="img/C0899682-8BCD-4485-A114-ABE6A795CD3D.jpg" alt="Profile pic :/"  />
+              <figcaption>Me in Istanbul</figcaption>
             </figure>
       </div>
   </div>
@@ -51,17 +51,17 @@
         <div class="col-sm">
           <figure>
 
-            <img src="img/shy.jpg" alt="shy pic">
-            <figcaption>_very shy</figcaption>
+            <img src="img/muslim.jpg" alt="Muslim pic">
+            <figcaption>Me being a Muslim</figcaption>
           </figure>
 
         </div>
         <div class="col-sm skills-list">
           <h2>skills</h2>
           <ul >
-            <li>01_user_experience_design</li>
-            <li>02_user_interface_design</li>
-            <li>03_visual_communication</li>
+            <li>01_bash_scripting</li>
+            <li>02_problem_solving</li>
+            <li>03_amazon_web_services</li>
             <li>04_motion_design</li>
             <li>05_user_research</li>
           </ul>
@@ -83,8 +83,8 @@
     </figure>
   </div>
   <div class="col-sm">
-  <h2>myntra subscription box</h2>
-  <p>imagine if the best stylists from myntra curated a box of clothes just for you and delivered it to you every month! this project deals with how that would look and function in the myntra mobile app.</p>
+  <h2>some cool thing I do here ?</h2>
+  <p>an amazing explaniation of what I do for this cool side project</p>
   <a href="https://www.behance.net/gallery/92302389/Myntra-Subscription-Box-UIUX" target="_blank" class="button">view more</a>
 </div>
 
@@ -132,51 +132,10 @@
 </div>
 </section>
 
-<!--new projects added -->
-
-<section class="project">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm righto">
-    <h2>lafzon lafzon mein</h2>
-  <p>lafzon lafzon mein is a card set, designed for english/hindi speaking people to help them learn the baeutiful script in which the urdu language is written - <b><i>nastaliq.</i></b></p>
-  <a href="https://www.behance.net/gallery/103119357/Lafzon-Lafzon-Mein-Card-set" target="_blank" class="button">view more</a>
-</div>
-<div class="col-sm">
-  <figure>
-    <img src="img/stp.jpg" alt="stp cover" />
-    <figcaption>card set design</figcaption>
-  </figure>
-</div>
-
-</div>
-</div>
-</section>
-
-
-<section class="project blue">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm">
-    <figure>
-      <img src="img/classroom.png" alt="classroom cover" />
-      <figcaption>a ui/ux group project</figcaption>
-    </figure>
-  </div>
-  <div class="col-sm">
-  <h2>google classroom groups</h2>
-  <p>with the spread of the covid virus, our teachers and students have moved to online platforms like google classroom. this projects aims to add to it, a neat little feature of assigning, collaborating, submitting and grading <b><i> group assignments.</i></b></p>
-  <a href="https://www.behance.net/gallery/105157453/Google-Classroom-Group-assignment-feature" target="_blank" class="button">view more</a>
-</div>
-
-</div>
-</div>
-</section>
-
 
 <footer id="contact">
-<h2>any questions?<br/> mail me at pranjaljain1303@gmail.com</h2>
-<p>designed and developed by pranjal jain</p>
+<h2>Have any questions?<br/>Feel free to get in touch with me at: bilalmustafa1797@gmail.com or DM me on insta!</h2>
+<p>designed and developed by bilal mustafa</p>
 </footer>
   </body>
 </html>
