--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm">
-          <h1>Heyyy, I am <br/>Bilal Mustafa</h1>
+          <h1>Hey, I am <br/>Bilal Mustafa</h1>
           <ul class="intro-list">
             <li>DevOps Engineer</li>
             <li>Philosopher</li>
@@ -38,7 +38,7 @@
         <div class="col-sm">
             <figure class="dp-img">
               <img src="img/C0899682-8BCD-4485-A114-ABE6A795CD3D.jpg" alt="Profile pic :/"  />
-              <figcaption>Me in Istanbul</figcaption>
+              <figcaption>One of many cool shots of me walking...</figcaption>
             </figure>
       </div>
   </div>
@@ -73,7 +73,7 @@
 
   <!-- projects -->
 
-<section class="project blue" id="projects">
+<!-- <section class="project blue" id="projects">
   <div class="container">
     <div class="row">
       <div class="col-sm">
@@ -90,10 +90,10 @@
 
 </div>
 </div>
-</section>
+</section> -->
 
 
-<section class="project">
+<!-- <section class="project">
   <div class="container">
     <div class="row">
       <div class="col-sm righto">
@@ -130,7 +130,7 @@
 
 </div>
 </div>
-</section>
+</section> -->
 
 
 <footer id="contact">
