--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="col-sm">
           <figure>
 
-            <img src="img/muslim.jpg" alt="Muslim pic">
+            <img src="img/over-istanbul.jpeg" alt="Muslim pic">
             <figcaption>Me being a Muslim</figcaption>
           </figure>
 
@@ -73,24 +73,24 @@
 
   <!-- projects -->
 
-<!-- <section class="project blue" id="projects">
+<section class="project blue" id="projects">
   <div class="container">
     <div class="row">
       <div class="col-sm">
     <figure>
-      <img src="img/myntra.png" alt="myntra cover" />
-      <figcaption>a ui/ux project</figcaption>
+      <img src="img/spainx3.jpeg" alt="travels" />
+      <figcaption>On benders in Spain</figcaption>
     </figure>
   </div>
   <div class="col-sm">
-  <h2>some cool thing I do here ?</h2>
-  <p>an amazing explaniation of what I do for this cool side project</p>
+  <h2>Travelling</h2>
+  <p>In recent years I've developed a passion to travel and experience new cultures. The prospect of being out of my bubble and comfort zone is an area I'm getting more and more cosy in.</p>
   <a href="https://www.behance.net/gallery/92302389/Myntra-Subscription-Box-UIUX" target="_blank" class="button">view more</a>
 </div>
 
 </div>
 </div>
-</section> -->
+</section> 
 
 
 <!-- <section class="project">
