Website Draft 5 - Twitter button added

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           <ul class="intro-list">
             <li>DevOps Engineer</li>
             <li>Philosopher</li>
-            <li>Footballer</li>
             <li>Polyglot</li>
             <li>Traveller</li>
+            <li>Football enthusiast</li>
           </ul>
           <a href="https://github.com/BMustafa97" target="_blank" class="button" >view my github</a>
         </div>
@@ -54,6 +54,14 @@
             <img src="img/over-istanbul.jpeg" alt="Muslim pic">
             <figcaption>Me being a Muslim</figcaption>
           </figure>
+          <a href="https://twitter.com/BillyM1797" target="_blank" class="button" >view my twitter</a>
+        </div>
+        <div class="col-sm">
+            <figure class="dp-img">
+              <img src="img/C0899682-8BCD-4485-A114-ABE6A795CD3D.jpg" alt="Profile pic :/"  />
+              <figcaption>One of many cool shots of me walking...</figcaption>
+            </figure>
+      </div>
 
         </div>
         <div class="col-sm skills-list">
