Website Draft 6 - tweaks

--- a/index.html
+++ b/index.html
@@ -52,16 +52,8 @@
           <figure>
 
             <img src="img/over-istanbul.jpeg" alt="Muslim pic">
-            <figcaption>Me being a Muslim</figcaption>
+            <figcaption>Admiring Istanbul</figcaption>
           </figure>
-          <a href="https://twitter.com/BillyM1797" target="_blank" class="button" >view my twitter</a>
-        </div>
-        <div class="col-sm">
-            <figure class="dp-img">
-              <img src="img/C0899682-8BCD-4485-A114-ABE6A795CD3D.jpg" alt="Profile pic :/"  />
-              <figcaption>One of many cool shots of me walking...</figcaption>
-            </figure>
-      </div>
 
         </div>
         <div class="col-sm skills-list">
@@ -70,8 +62,8 @@
             <li>01_bash_scripting</li>
             <li>02_problem_solving</li>
             <li>03_amazon_web_services</li>
-            <li>04_motion_design</li>
-            <li>05_user_research</li>
+            <li>04_terraform</li>
+            <li>05_jenkins</li>
           </ul>
         </div>
 
