Website Draft 7 - readdded twitter

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
         <div class="col-sm">
           <h1>Hey, I am <br/>Bilal Mustafa</h1>
           <ul class="intro-list">
-            <li>DevOps Engineer</li>
+            <li>Theologian</li>
             <li>Philosopher</li>
+            <li>DevOps Engineer</li>
             <li>Polyglot</li>
             <li>Traveller</li>
             <li>Football enthusiast</li>
@@ -45,7 +46,7 @@
 </div>
   </header>
 
-  <section id="skills" >
+  <section id="Skills" >
     <div class="container skills-container">
       <div class="row">
         <div class="col-sm">
@@ -65,6 +66,7 @@
             <li>04_terraform</li>
             <li>05_jenkins</li>
           </ul>
+          <a href="https://twitter.com/BillyM1797" target="_blank" class="button" >view my twitter</a>
         </div>
 
   </div>
