Website Draft 8 - spoon

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <div class="col-sm">
   <h2>Travelling</h2>
   <p>In recent years I've developed a passion to travel and experience new cultures. The prospect of being out of my bubble and comfort zone is an area I'm getting more and more cosy in.</p>
-  <a href="https://www.behance.net/gallery/92302389/Myntra-Subscription-Box-UIUX" target="_blank" class="button">view more</a>
+  <a href="https://www.google.com/search?q=picture+of+a+spoon&rlz=1C5CHFA_enGB956GB956&sxsrf=ALeKk02hFSeoYmYW-JxVzYyiITvhwIA5qg:1625604169357&source=lnms&tbm=isch&sa=X&ved=2ahUKEwim4Ly4p8_xAhXUolwKHRjzAz0Q_AUoAXoECAEQAw&biw=1440&bih=789#imgrc=euYvQR5brbDnTM" target="_blank" class="button">view an amazing picture I took!</a>
 </div>
 
 </div>
