--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </div>
   </header>
 
-  <section id="Skills" >
+  <section id="skills" >
     <div class="container skills-container">
       <div class="row">
         <div class="col-sm">
