--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 
 
 <footer id="contact">
+<h1>NOTE: Website is under development currently</h1>
 <h2>Have any questions?<br/>Feel free to get in touch with me at: bilalmustafa1797@gmail.com or DM me on insta!</h2>
 <p>designed and developed by bilal mustafa</p>
 </footer>
