--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <ul>
       <li><a href="#about">about</a></li>
       <li><a href="#skills">skills</a></li>
-      <li><a href="#blog">blog</a></li>
+      <li><a href="#travel">travel</a></li>
       <li><a href="#contact">contact</a></li>
       <li class="empty-space"></li>
       <li><a href="http://www.linkedin.com/in/bilalmustafa97/" target="_blank">linkedin</a></li>
@@ -75,7 +75,7 @@
 
   <!-- projects -->
 
-<section class="project blue" id="blog">
+<section class="project blue" id="travel">
   <div class="container">
     <div class="row">
       <div class="col-sm">
