--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <li><a href="#about">about</a></li>
       <li><a href="#skills">skills</a></li>
       <li><a href="#travel">travel</a></li>
+      <li><a href="#writing">writing</a></li>
       <li><a href="#contact">contact</a></li>
       <li class="empty-space"></li>
       <li><a href="http://www.linkedin.com/in/bilalmustafa97/" target="_blank">linkedin</a></li>
@@ -88,6 +89,26 @@
   <h2>Travelling</h2>
   <p>In recent years I've developed a passion to travel and experience new cultures. The prospect of being out of my bubble and comfort zone is an area I'm getting more and more cosy in.</p>
   <a href="https://www.thoughtco.com/singing-spoon-dry-ice-project-606407" target="_blank" class="button">view a really interesting article!</a>
+</div>
+
+</div>
+</div>
+</section>
+
+
+<section class="project white" id="writing">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+    <figure>
+      <img src="img/writing.png" alt="travels" />
+      <figcaption>Still figuring it all out!</figcaption>
+    </figure>
+  </div>
+  <div class="col-sm">
+  <h2>Writing</h2>
+  <p>After spending many years studying Theology and Philosophy, I currently write stories on medium speaking about anything and everything!</p>
+  <a href="https://theusooliiconoclast.medium.com/" target="_blank" class="button">my medium page!</a>
 </div>
 
 </div>
