--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 </div>
 </section>
 
-
-<section class="project white" id="writing">
+<!-- 
+<section class="project blue" id="writing">
   <div class="container">
     <div class="row">
       <div class="col-sm">
@@ -114,7 +114,7 @@
 </div>
 </div>
 </section> 
-
+ -->
 
 <!-- <section class="project">
   <div class="container">
