--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
 </section>
 
 
-<section class="project blue" id="writing">
+<section class="project" id="writing">
   <div class="container">
     <div class="row">
-      <div class="col-sm">
+      <div class="col-sm righto">
     <figure>
       <img src="img/writing.png" alt="travels" />
       <figcaption>Still figuring it all out!</figcaption>
