--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
 <footer id="contact">
 <h2>NOTE: Website is under development currently</h2>
-<h2>Have any questions?<br/>Feel free to get in touch with me at: bilalmustafa1797@gmail.com or DM me on insta!</h2>
+<h2>Have any questions?<br/>Feel free to get in touch with me with a DM me on insta!</h2>
 <p>designed and developed by bilal mustafa</p>
 </footer>
   </body>
