--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <li>Polyglot</li>
             <li>Traveller</li>
             <li>Football enthusiast</li>
+            <li>Asma loves chai</li>
           </ul>
           <a href="https://github.com/BMustafa97" target="_blank" class="button" >view my github</a>
         </div>
