--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm">
-          <h1>Welcome to my<br/>Space!</h1>
+          <h1>Welcome to my<br/>Space! Hi Shan!</h1>
           <ul class="intro-list">
             <li>Theologian</li>
             <li>Philosopher</li>
